Add Hobbies sectioned

--- a/resume.html
+++ b/resume.html
@@ -63,7 +63,10 @@ the training, evaluation and inductions of new members in the team.</p>
     <h3>Data Compression on FPGA</h3>
     <p>Designed and implemented data compressor on Field Programmable Gate Array (FPGA) using Lempel Ziv Welch algorithm<br> for compressing text. I carried out the simulations on Xilinx ISE platform and used Verilog as hardware descriptive language.<br> Compression ratio of 1.5 was achieved.</p>
     
-
+  <h2>Hobbies</h2>
+    <h3>Reading Books</h3>
+    <p>Read a lot of books, review for few of them can be found <a href="Book_Reviews">here</a></p>
+    
   </body>
 
   <footer>
