--- a/book_reviews.html
+++ b/book_reviews.html
@@ -6,7 +6,7 @@
 
 <body>
 <ul>
-<li>"Mindset: The New Psychology of Success" by "Carol S. Dweck" <a href="Book_Reviews/mindset_by_Carol_Dweck.html">Review of the book<\a>
+<li>"Mindset: The New Psychology of Success" by "Carol S. Dweck" <a href="Book_Reviews/mindset_by_Carol_Dweck.html">Review of the book</a>
 </ul>
 </body>
 
