--- a/Book_Reviews/mindset_by_Carol_Dweck.html
+++ b/Book_Reviews/mindset_by_Carol_Dweck.html
@@ -1,23 +1,26 @@
 <!DOCTYPE HTML>
 <html>
 <head>
-Review of Mindset: The New Psychology of Success
+<title>Review of Mindset: The New Psychology of Success</title>
+<link rel="stylesheet" href="../css/book_review.css">
 </head>
 
 <body>
+<img src="../images/book.jpeg">
 <h1>Mindset: The New Psychology of Success</h1>
+<h2>By Carol S. Dweck</h2>
 <p>
 There are two mindsets every individual possesses – fixed mindset and a growth mindset. 
 </p>
 <p>
-The people with the fixed mindset are those who believes that the intelligence or any talent or any human attribute is fixed, you are born with it.
+The people with the fixed mindset are those who believe that the intelligence or any talent or any human attribute is fixed, you are born with it.
 In contrast to this, the people with the growth mindset believes that any attribute of the human can be changed as he/she lives his/her life. 
 </p>
 <p>
 With the differences in the mindset, the two groups often react differently to the real-life situations, 
 be it schoolwork, games, relations – parents and child or husband and wife or student and teacher or boss and the people working with or below him. 
 This mindset difference separates boss from a leader, a failed marriage from a life-long marriage, a confident child from a depressed child. 
-The fixed mindset always have a fear of getting failed in any task, because of the fact that traits are fixed, 
+Fixed mindset people always have a fear of failing in any task, because of the fact that traits are fixed, 
 losing one match or failing in one exam means he is dumb, you are not skilled at it and you can’t change it either. 
 However, the growth mindset teaches you that anything can be changed with hard work and putting efforts into it; 
 you failed today but that doesn’t define who you will become tomorrow, is the mentality developed among the people with growth-mindset. 
@@ -25,7 +28,7 @@ Thus, it makes you reach the zenith whichever domain you pursue.
 </p>
 <p>
 Few people are talented, they might reach the top, but with fixed mindset, they cannot remain there forever. 
-One should learn throughout a life, whether he be a CEO of a company or a teacher teaching seventh grade students, everyone gets an opportunity
+One should learn throughout life, whether he be a CEO of a company or a teacher teaching seventh grade students, everyone gets an opportunity
 to learn something every day, they must grab this opportunity. This is what having a growth mindset is.  
 </p>
 <p>
@@ -37,6 +40,11 @@ In the end, the growth mindset will make you reach the pinnacle, more importantl
 <p>
 It is up to you what you choose – fixed mindset or growth mindset and remember Alex Rodriguez’s quote: “You either go one way or the other”. Choose it wisely! 
 </p>
+
+<div id="left"></div>
+<div id="right"></div>
+<div id="top"></div>
+<div id="bottom"></div>
 
 </body>
 </html>
